test/fail/integration/_fail_grammar_lactarg_2.hs
x :: Int -> Int -> Int
x y z = y + z
y :: Int
y = x 3 t
main = print "hello"